@@ -7,6 +7,8 @@ A.F....... [ZBX-1357] updated Brazilian Portuguese, French, Italian, Russian and
 ....I..PS. [ZBXNEXT-1257] dropped support for UCD-SNMP (asaveljevs)
 
 Bug fixes:
+........S. [ZBX-7400] fixed possible server crash when processing trigger functions with text or log items with Oracle backend (Sasha)
+........S. [ZBX-7400] fixed possible server crash when sending messages with Oracle backend (Sasha)
 ........S. [ZBX-7329] fixed VMware related compiling error on FreeBSD (wiper)
 ........S. [ZBX-7359] fixed possible crash when parsing VMware datastore data (wiper)
 ........S. [ZBX-7309] fixed resolving of {ITEM.VALUE} macro in recovery messages (Andris, Sasha)
